--- a/design/default.css
+++ b/design/default.css
@@ -64,7 +64,25 @@ input[type=submit] {
     margin-top: 30px;
 }
 
+#brands {
+    background: #EFF7FC;
+    padding: 30px;
+    text-align: center;
+}
+
 .container {
     width: 1100px;
     margin: 0 auto;
+}
+
+h3 {
+    margin: 0;
+    color: #EE6123;
+    text-transform: uppercase;
+    padding-bottom: 30px;
+}
+
+.picture {
+    height: 35px;
+    margin: 15px;
 }
