--- a/design/default.css
+++ b/design/default.css
@@ -8,12 +8,28 @@ html, body {
     box-sizing: border-box;
 }
 
+a {
+    color: #EE6123;
+    font-weight: bold;
+    text-decoration: none;
+}
 header {
     padding: 30px;
 }
 
 header #logo {
     height: 50px;
+}
+
+footer {
+    text-align: center;
+    padding: 30px;font-size: 0.9em;
+
+}
+
+footer #logo {
+    height: 35px;
+    margin: 10px;
 }
 
 h1 {
@@ -28,6 +44,14 @@ h1 {
 h2 {
     color: white;
     text-align: center;
+    font-weight: 500;
+}
+
+h3 {
+    margin: 0;
+    color: #EE6123;
+    text-transform: uppercase;
+    padding-bottom: 30px;
 }
 
 input[type=url] {
@@ -73,13 +97,6 @@ input[type=submit] {
 .container {
     width: 1100px;
     margin: 0 auto;
-}
-
-h3 {
-    margin: 0;
-    color: #EE6123;
-    text-transform: uppercase;
-    padding-bottom: 30px;
 }
 
 .picture {
